wip: local changes

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,12 @@ DJANGO_DEBUG=True
 DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost
 DJANGO_SETTINGS_MODULE=config.settings.dev
 
+# Optional: auto-create superuser on deploy (useful on Render free tier)
+AUTO_CREATE_SUPERUSER=False
+DJANGO_SUPERUSER_USERNAME=satheesh
+DJANGO_SUPERUSER_EMAIL=satheeshyadav85@gmail.com
+DJANGO_SUPERUSER_PASSWORD=satheesh
+
 # ─── Database ─────────────────────────────────────────
 # SQLite (local dev):
 DATABASE_URL=sqlite:///db.sqlite3
