wip: local changes

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ DJANGO_SETTINGS_MODULE=config.settings.dev
 AUTO_CREATE_SUPERUSER=False
 DJANGO_SUPERUSER_USERNAME=satheesh
 DJANGO_SUPERUSER_EMAIL=satheeshyadav85@gmail.com
-DJANGO_SUPERUSER_PASSWORD=satheesh
+DJANGO_SUPERUSER_PASSWORD=satheesh@123
 
 # ─── Database ─────────────────────────────────────────
 # SQLite (local dev):
