--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
   web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
-    entrypoint: ["/bin/sh", "/app/docker/entrypoint.sh"]
+    entrypoint: ["python", "/app/docker/entrypoint.py"]
     volumes:
       - .:/app
       - media:/app/media
@@ -40,7 +40,7 @@ services:
   worker:
     build: .
     command: celery -A config worker -l info
-    entrypoint: ["/bin/sh", "/app/docker/entrypoint.sh"]
+    entrypoint: ["python", "/app/docker/entrypoint.py"]
     volumes:
       - .:/app
       - media:/app/media
