fix: allow env-driven superuser password reset (no Render shell)

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ AUTO_CREATE_SUPERUSER=False
 DJANGO_SUPERUSER_USERNAME=satheesh
 DJANGO_SUPERUSER_EMAIL=satheeshyadav85@gmail.com
 DJANGO_SUPERUSER_PASSWORD=satheesh@123
+AUTO_RESET_SUPERUSER_PASSWORD=False
 
 # ─── Database ─────────────────────────────────────────
 # SQLite (local dev):
